fix(PageListWidget): wrong function used